--- a/indexstyle.css
+++ b/indexstyle.css
@@ -16,7 +16,7 @@
 
   video{
     overflow: hidden;
-    background-color: turquoise;
+/*     background-color: turquoise; */
     object-fit: cover;
     width: 100vw;
     height:100vh;
