--- a/mainpagestyle.css
+++ b/mainpagestyle.css
@@ -15,7 +15,7 @@
 
   video{
     overflow: hidden;
-    background-color: turquoise;
+/*     background-color: turquoise; */
     object-fit: cover;
     width: 100vw;
     height:100vh;
